FIX: fixed image alignment

--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -148,8 +148,10 @@
 }
 
 
-.product-content{
+.product-content.cart{
     margin-left: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .seller-info{
@@ -292,7 +294,6 @@
         border-right: 1px solid gray;
         display: flex;
         flex-direction: column;
-        align-items: center;
     }
 
     .product-info img{
